Improve chart and fix dark mode reload bug

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -47,6 +47,7 @@ nav {
   background: black;
   color: white;
   transform: translateX(100%);
+  z-index: 1;
 }
 
 .menu ul {
@@ -58,6 +59,7 @@ nav {
   font-size: large;
   transform: translateX(100%);
   padding-right: 0;
+  z-index: 2;
 }
 
 .close-button {
@@ -204,4 +206,29 @@ nav {
 
 .popup button:hover {
   background: #0056b3;
+}
+
+.bar {
+  width: 300%;
+}
+
+.chart {
+  width: 100%;
+  overflow: scroll;
+}
+
+.chart-title {
+  width: 100%;
+  text-align: center;
+  font-size: small;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+  
 }
